--- a/MVC/4/DomeApp/DomeApp/Views/Account/ExternalLoginFailure.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/ExternalLoginFailure.cshtml
@@ -2,5 +2,7 @@
     ViewBag.Title = "Login Failure";
 }
 
-<p>@ViewBag.Title</p>
+<div class="page-header">
+    <h3>@ViewBag.Title</h3>
+</div>
 <p>Unsuccessful login with service.</p>
