--- a/MVC/4/DomeApp/DomeApp/Views/Account/Manage.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/Manage.cshtml
@@ -3,7 +3,9 @@
     ViewBag.Title = "Manage Account";
 }
 
-<p>@ViewBag.Title</p>
+<div class="page-header">
+    <h3>@ViewBag.Title</h3>
+</div>
 
 <p>@ViewBag.StatusMessage</p>
 
