--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Index.cshtml
@@ -1,22 +1,24 @@
 ﻿@model PagedList<BlogPost>
 
-@{
-    ViewBag.Title = "Index";
-}
-
-<p>@ViewBag.Title</p>
-
-<p>
-    @if (@User.HasActionPermission(Request.RequestContext, "Create"))
-    {
-        @Html.ActionLink("Create New", "Create")
-    }    
-</p>
-
-<form method="get" action="@Url.Action("Index")"
-      data-dome-ajax="true" data-dome-target="#posts">
-    <input type="text" name="search" data-dome-autocomplete="@Url.Action("Autocomplete")" />
-    <input type="submit" value="@DomeApp.Views.Resources.search" />
-</form>
-
-@Html.Partial("PostSummary", Model)
+<div class="row">
+    <div class="col-xs-12 col-sm-9 pull-left">
+        <form method="get" action="@Url.Action("Index")"
+              data-dome-ajax="true" data-dome-target="#posts">
+            <div class="input-group">
+                <input type="text" name="search" data-dome-autocomplete="@Url.Action("Autocomplete")" class="form-control" placeholder="Search for some text" />
+                <span class="input-group-btn">
+                    <input type="submit" value="@DomeApp.Views.Resources.search" class="btn btn-primary" />
+                </span>
+            </div>
+        </form>
+        @if (@User.HasActionPermission(Request.RequestContext, "Create"))
+        {
+            <div class="pull-right">
+                @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-success" })
+            </div>
+        }
+    </div>
+    <div class="col-xs-12 col-sm-9 pull-left">
+        @Html.Partial("PostSummary", Model)
+    </div>
+</div>
