--- a/MVC/4/DomeApp/DomeApp/Views/Home/Contact.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Home/Contact.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Contact me";
 }
 
-<p>@ViewBag.Title.</p>
+<div class="page-header">
+    <h3>@ViewBag.Title</h3>
+</div>
 
 <section>
-    <p>
-        <span>Github:</span>
-        <span><a href="https://github.com/danyandresh">github.com/danyandresh</a></span>
-    </p>
+    <span class="lead">Github:</span>
+    <span><a href="https://github.com/danyandresh">github.com/danyandresh</a></span>
 </section>
