--- a/MVC/4/DomeApp/DomeApp/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -13,13 +13,11 @@ else
     {
         @Html.AntiForgeryToken()
         <fieldset id="socialLoginList">
-            <legend>Log in using another service</legend>
-            <p>
-                @foreach (AuthenticationClientData p in Model)
-                {
-                    <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
-                }
-            </p>
+            <span>Log in using:</span>
+            @foreach (AuthenticationClientData p in Model)
+            {
+                <button type="submit" class="btn btn-primary active" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
+            }
         </fieldset>
     }
 }
