--- a/MVC/4/DomeApp/DomeApp/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -3,10 +3,10 @@
 @if (Model.Count > 0)
 {
     <p>Registered external logins</p>
-    @foreach (DomeApp.Models.ExternalLogin externalLogin in Model)
+    foreach (DomeApp.Models.ExternalLogin externalLogin in Model)
     {
         @Html.Display(externalLogin.ProviderDisplayName)
-        @if (ViewBag.ShowRemoveButton)
+        if (ViewBag.ShowRemoveButton)
         {
             using (Html.BeginForm("Disassociate", "Account"))
             {
