--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
@@ -1,13 +1,7 @@
 ﻿@model DomeApp.Models.BlogPost
 
 @{
-    ViewBag.Title = "Edit";
-}
-
-<p>@ViewBag.Title</p>
-
-@{
-    var editorAreaAttributes = new { @class = "expandableTextarea", rows = 20, columns = 20 };
+    ViewBag.Title = "Edit post";
 }
 
 @using (Html.BeginForm())
@@ -15,31 +9,26 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
     <fieldset>
-        <legend>BlogPost</legend>
-
         @Html.HiddenFor(model => model.Id)
 
         <div>
-            @Html.LabelFor(model => model.Title)
             @Html.EditorFor(model => model.Title)
             @Html.ValidationMessageFor(model => model.Title)
         </div>
 
         <div>
             @Html.LabelFor(model => model.Excerpt)
-            @Html.TextAreaFor(model => model.Excerpt, editorAreaAttributes)
+            @Html.TextAreaFor(model => model.Excerpt, new { @class = "form-control", rows = 10 })
             @Html.ValidationMessageFor(model => model.Excerpt)
         </div>
 
         <div>
             @Html.LabelFor(model => model.Content)
-            @Html.TextAreaFor(model => model.Content, editorAreaAttributes)
+            @Html.TextAreaFor(model => model.Content, new { @class = "form-control", rows = 30 })
             @Html.ValidationMessageFor(model => model.Content)
         </div>
 
-        <p>
-            <input type="submit" value="Save" />
-        </p>
+        <input type="submit" value="Save" class="btn btn-primary active pull-right" />
     </fieldset>
 }
 
