--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Delete.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Delete.cshtml
@@ -1,10 +1,12 @@
 ﻿@model DomeApp.Models.Comment
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete comment";
 }
 
-<p>@ViewBag.Title</p>
+<div class="page-header">
+    <h3>@ViewBag.Title</h3>
+</div>
 
 <p>Are you sure you want to delete this?</p>
 <fieldset>
