--- a/MVC/4/DomeApp/DomeApp/Views/Home/About.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Home/About.cshtml
@@ -1,9 +1,10 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About DomeApp";
 }
 
-<p>@ViewBag.Title</p>
-
+<div class="page-header">
+    <h3>@ViewBag.Title</h3>
+</div>
 <article>
     <p>
         This is a self-made blog engine - very basic indeed,
@@ -15,13 +16,17 @@
 </article>
 
 <aside>
-    <p>Goodies</p>
-    <p>
-        <a href="https://www.youtube.com/playlist?list=PLMvLDJ7usmZB-Mu4kNB-Qtr_1serQjfti">
-            Great bootstrap series by Coder's Guide
-        </a>
-        <a href="http://pluralsight.com/training/Player?author=scott-allen&name=mvc4-building-m6-ajax&mode=live&clip=0&course=mvc4-building">
-            A free tutorial on MVC4 by Scott Allen from PluralSight
-        </a>
-    </p>
+    <h4 class="lead">Goodies</h4>
+    <ul>
+        <li>
+            <a href="https://www.youtube.com/playlist?list=PLMvLDJ7usmZB-Mu4kNB-Qtr_1serQjfti">
+                Great bootstrap series by Coder's Guide
+            </a>
+        </li>
+        <li>
+            <a href="http://pluralsight.com/training/Player?author=scott-allen&name=mvc4-building-m6-ajax&mode=live&clip=0&course=mvc4-building">
+                A free tutorial on MVC4 by Scott Allen from PluralSight
+            </a>
+        </li>
+    </ul>
 </aside>
