--- a/MVC/4/DomeApp/DomeApp/Views/Shared/_LoginPartial.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Shared/_LoginPartial.cshtml
@@ -1,15 +1,17 @@
 ﻿@if (Request.IsAuthenticated)
 {
-    <text>
-        Hello, @Html.ActionLink(User.Identity.Name, "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Manage" })!
-        @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
-        {
-            @Html.AntiForgeryToken()
-            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
-        }
-    </text>
+    <li>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            @User.Identity.Name <b class="caret"></b>
+        </a>
+        <ul class="dropdown-menu userActions">
+            @Html.Partial("_UserActions")
+        </ul>
+    </li>
 }
 else
 {
-    @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+    <li class="@(ViewContext.RouteData.Values["Action"].ToString() == "Login" ? "active" : "")">
+        @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+    </li>
 }
