--- a/MVC/4/DomeApp/DomeApp/Views/Comment/CommentsByPost.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/CommentsByPost.cshtml
@@ -8,7 +8,7 @@ var post = Model.Item1;}
 @if (pagedList.TotalPages == 0)
 {
     //TODO Move this to a resource
-    @: No comments just yet.
+    @*@: No comments just yet.*@
 }
 else
 {
