--- a/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/Create.cshtml
@@ -29,9 +29,9 @@ else
         </div>
     }
 
-    <div>
+    @*<div>
         @Html.ActionLink("Back to List", "Index")
-    </div>
+    </div>*@
 }
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
