--- a/MVC/4/DomeApp/DomeApp/Views/Shared/_Layout.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
         <div class="container">
             <div class="row">
-                @Html.ActionLink("DomeApp", "Index", "BlogPost", new { @class = "navbar-brand col-xs-3" })
+                @Html.ActionLink("DomeApp", "Index", "BlogPost", null, new { @class = "navbar-brand col-xs-3 col-sm-3 pull-left" })
 
-                <div class="pull-right">
+                <div class="col-xs-9 col-sm-9 pull-right">
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderToCollapse">
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
