--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Details.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Details.cshtml
@@ -4,14 +4,15 @@
     ViewBag.Title = "Details";
 }
 
-<div class="page-header">
-    <h3>@Html.DisplayFor(m => m.Title)</h3>
-</div>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">@Html.DisplayFor(m => m.Title)</h3>
+    </div>
 
-<div class="">
-    @Model.Content.ToSafeMarkdown()
+    <div class="panel-body">
+        @Model.Content.ToSafeMarkdown()
+    </div>
 </div>
-
 <div class="input-group input-group-lg pull-right">
     <div>
         @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary active" })
@@ -25,11 +26,9 @@
         }
     </div>
 </div>
-
 <div id="postComments">
     @Html.Action("CommentsByPost", "Comment", new { postId = Model.Id })
 
-    <p class="alert-info lead"> Post a new comment</p>
     @Html.Action("Create", "Comment", new { postId = Model.Id })
 </div>
 
