--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
@@ -1,26 +1,27 @@
 ﻿@model PagedList<BlogPost>
 
 
-<div id="posts">
+<div id="posts" class="list-group">
     @foreach (var item in Model)
     {
-        <div>
-            <div class="page-header">
+        <div class="list-group-item">
+            <a class="page-header" href="@Url.Action("Details", new { id = item.Id })">
                 <h3>@Html.DisplayFor(m => item.Title)</h3>
-            </div>
+            </a>
 
-            <div>
+            <div class="well">
                 @item.Excerpt.ToSafeMarkdown()
             </div>
 
-
-
             <div>
-                <span class="text-center text-right">@((item.Comments ?? Enumerable.Empty<Comment>()).Count()) comments</span>
+
+                <a href="@Url.Action("Details", new { id = item.Id })#postComments">
+                    <span class="glyphicon glyphicon-comment text-left"></span>
+                    @((item.Comments ?? Enumerable.Empty<Comment>()).Count()) comments
+                </a>
                 <div class="input-group input-group-lg pull-right">
                     <div>
                         @Html.ActionLink("Read more", "Details", new { id = item.Id }, new { @class = "btn btn-info" })
-
                     </div>
                 </div>
             </div>
