Improvements on comment create control and login page

--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Delete.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Delete.cshtml
@@ -4,22 +4,29 @@
     ViewBag.Title = "Delete a post";
 }
 
-<div class="page-header">
-    <h3>@ViewBag.Title</h3>
-</div>
-
-<p>Are you sure you want to delete <b>@Model.Title</b>?</p>
-
-<div>
-    @Html.DisplayNameFor(model => model.Content)
-    @Html.DisplayFor(model => model.Content)
-</div>
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    <div class="pull-right">
-        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary active" })
-        <input type="submit" value="Delete" class="btn btn-danger" />
-    </div>
+    <fieldset>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Model.Title
+            </div>
+            <div class="panel-body">
+                @Html.DisplayNameFor(model => model.Content)
+                @Html.DisplayFor(model => model.Excerpt)
+            </div>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <span>Are you sure you want to delete his post?</span>
+            </div>
+        </div>
+
+        <div class="pull-right">
+            @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default active" })
+            <input type="submit" value="Delete" class="btn btn-danger" />
+        </div>
+    </fieldset>
 }
