--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Details.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Details.cshtml
@@ -5,25 +5,28 @@
 }
 
 <div class="panel panel-default">
-    <div class="panel-heading">
-        <h3 class="panel-title">@Html.DisplayFor(m => m.Title)</h3>
+    <div class="panel-heading page-header">
+        <a class="page-header">
+            <h3 class="panel-title">@Html.DisplayFor(m => m.Title)</h3>
+        </a>
     </div>
 
     <div class="panel-body">
         @Model.Content.ToSafeMarkdown()
     </div>
-</div>
-<div class="input-group input-group-lg pull-right">
-    <div>
-        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary active" })
-        @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
-        {
-            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-warning" })
-        }
-        @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
-        {
-            @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
-        }
+
+    <div class="panel-footer pull-right">
+        <div>
+            @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary active" })
+            @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
+            {
+                @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "btn btn-warning" })
+            }
+            @if (@User.HasActionPermission(Request.RequestContext, "Edit"))
+            {
+                @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class = "btn btn-danger" })
+            }
+        </div>
     </div>
 </div>
 <div id="postComments">
