--- a/MVC/4/DomeApp/DomeApp/Content/domeapp.css
+++ b/MVC/4/DomeApp/DomeApp/Content/domeapp.css
@@ -21,3 +21,11 @@
     padding-bottom: 0;
 }
 
+.container {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.panel-title {
+    font-size: 22px;
+}
