--- a/MVC/4/DomeApp/DomeApp/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,11 +1,22 @@
 ﻿@model ICollection<AuthenticationClientData>
 
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <span>Login using external services:</span>
+    </div>
+</div>
+
 @if (Model.Count == 0)
 {
-    <p>
-        There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=252166">this article</a>
-        for details on setting up this ASP.NET application to support logging in via external services.
-    </p>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <span>
+                There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkId=252166">this article</a>
+                for details on setting up this ASP.NET application to support logging in via external services.
+            </span>
+        </div>
+    </div>
 }
 else
 {
@@ -13,11 +24,15 @@ else
     {
         @Html.AntiForgeryToken()
         <fieldset id="socialLoginList">
-            <span>Log in using:</span>
-            @foreach (AuthenticationClientData p in Model)
-            {
-                <button type="submit" class="btn btn-primary active" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
-            }
+            <div class="panel">
+            </div>
+
+            <div class="pull-right">
+                @foreach (AuthenticationClientData p in Model)
+                {
+                    <button type="submit" class="btn btn-primary active" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">Log in using @p.DisplayName</button>
+                }
+            </div>
         </fieldset>
     }
 }
