--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Create.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Create.cshtml
@@ -1,41 +1,45 @@
 ﻿@model DomeApp.Models.BlogPost
 
 @{
-    ViewBag.Title = "Create a new post";
+    ViewBag.Title = "Create post";
 }
 
-<div class="page-header">
-    <h3>@ViewBag.Title</h3>
-</div>
-
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>BlogPost</legend>
-
-        <div>
-            @Html.LabelFor(model => model.Title)
-            @Html.EditorFor(model => model.Title)
-            @Html.ValidationMessageFor(model => model.Title)
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Html.LabelFor(model => model.Title)
+                @Html.TextAreaFor(model => model.Title, new { @class = "form-control", rows = 1 })
+                @Html.ValidationMessageFor(model => model.Title)
+            </div>
         </div>
 
-        <div>
-            @Html.LabelFor(model => model.Content)
-            @Html.TextAreaFor(model => model.Content, new { @class = "expandableTextarea" })
-            @Html.ValidationMessageFor(model => model.Content)
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Html.LabelFor(model => model.Excerpt)
+                @Html.TextAreaFor(model => model.Excerpt, new { @class = "form-control", rows = 10 })
+                @Html.ValidationMessageFor(model => model.Excerpt)
+            </div>
         </div>
 
-        <p>
-            <input type="submit" value="Create" />
-        </p>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Html.LabelFor(model => model.Content)
+                @Html.TextAreaFor(model => model.Content, new { @class = "form-control", rows = 30 })
+                @Html.ValidationMessageFor(model => model.Content)
+            </div>
+        </div>
+
+        <div class="pull-right">
+            @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default active" })
+            <input type="submit" value="Publish" class="btn btn-primary" />
+        </div>
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
 }
