--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/Edit.cshtml
@@ -8,33 +8,39 @@
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
+    @Html.HiddenFor(model => model.Id)
+
     <fieldset>
-        @Html.HiddenFor(model => model.Id)
-
-        <div>
-            @Html.EditorFor(model => model.Title)
-            @Html.ValidationMessageFor(model => model.Title)
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Html.LabelFor(model => model.Title)
+                @Html.TextAreaFor(model => model.Title, new { @class = "form-control", rows = 1 })
+                @Html.ValidationMessageFor(model => model.Title)
+            </div>
         </div>
 
-        <div>
-            @Html.LabelFor(model => model.Excerpt)
-            @Html.TextAreaFor(model => model.Excerpt, new { @class = "form-control", rows = 10 })
-            @Html.ValidationMessageFor(model => model.Excerpt)
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Html.LabelFor(model => model.Excerpt)
+                @Html.TextAreaFor(model => model.Excerpt, new { @class = "form-control", rows = 10 })
+                @Html.ValidationMessageFor(model => model.Excerpt)
+            </div>
         </div>
 
-        <div>
-            @Html.LabelFor(model => model.Content)
-            @Html.TextAreaFor(model => model.Content, new { @class = "form-control", rows = 30 })
-            @Html.ValidationMessageFor(model => model.Content)
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @Html.LabelFor(model => model.Content)
+                @Html.TextAreaFor(model => model.Content, new { @class = "form-control", rows = 30 })
+                @Html.ValidationMessageFor(model => model.Content)
+            </div>
         </div>
 
-        <input type="submit" value="Save" class="btn btn-primary active pull-right" />
+        <div class="pull-right">
+            @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default active" })
+            <input type="submit" value="Publish" class="btn btn-primary" />
+        </div>
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
 }
