Added user DisplayName to be publicly visible

--- a/MVC/4/DomeApp/DomeApp/Views/Comment/CommentsByPost.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Comment/CommentsByPost.cshtml
@@ -24,7 +24,7 @@ else
                     <div class="list-group-item-heading">
                         <a href="#comment-@item.Id">
                             <h4 class="list-group-item-heading">
-                                /*todo: implement user*/ <small>@item.CreatedDate</small>
+                                @item.Author.DisplayName <small>@item.CreatedDate</small>
                             </h4>
                         </a>
                     </div>
