--- a/MVC/4/DomeApp/DomeApp/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/ExternalLoginConfirmation.cshtml
@@ -3,32 +3,36 @@
     ViewBag.Title = "Register";
 }
 
-<div class="page-header">
-    <h3>@ViewBag.Title</h3>
-</div>
-<p>Associate your @ViewBag.ProviderDisplayName account.</p>
+<fieldset>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            Associate your @ViewBag.ProviderDisplayName account
+        </div>
+    </div>
 
-@using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }))
-{
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Association Form</legend>
-        <p>
-            You've successfully authenticated with <strong>@ViewBag.ProviderDisplayName</strong>.
-            Please enter a user name for this site below and click the Confirm button to finish
-            logging in.
-        </p>
-        <p>
-            @Html.LabelFor(m => m.UserName)
-            @Html.TextBoxFor(m => m.UserName)
-            @Html.ValidationMessageFor(m => m.UserName)
-        </p>
+    @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
+        @Html.HiddenFor(m => m.UserName)
         @Html.HiddenFor(m => m.ExternalLoginData)
-        <input type="submit" value="Register" />
-    </fieldset>
-}
+            
+        <div class="panel panel-default">
+
+            <div class="panel-heading">
+                @Html.TextBoxFor(m => m.DisplayName, new { placeholder = "Your name publicly visible", @class = "form-control" })
+                @Html.ValidationMessageFor(m => m.UserName)
+            </div>
+        </div>
+
+        <div class="pull-right">
+            @Html.ActionLink("Cancel", "Index", null, new { @class = "btn btn-default active" })
+            <input type="submit" value="Register" class="btn btn-primary" />
+        </div>
+    }
+</fieldset>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
