Switch to better UI on manageUser page

--- a/MVC/4/DomeApp/DomeApp/Views/Account/ExternalLoginFailure.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/ExternalLoginFailure.cshtml
@@ -2,7 +2,8 @@
     ViewBag.Title = "Login Failure";
 }
 
-<div class="page-header">
-    <h3>@ViewBag.Title</h3>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <span>Unsuccessful login with service</span>
+    </div>
 </div>
-<p>Unsuccessful login with service.</p>
