--- a/MVC/4/DomeApp/DomeApp/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,26 +1,32 @@
-﻿@model ICollection<DomeApp.Models.ExternalLogin>
+﻿@model ICollection<ExternalLogin>
 
 @if (Model.Count > 0)
 {
-    <p>Registered external logins</p>
-    foreach (DomeApp.Models.ExternalLogin externalLogin in Model)
-    {
-        @Html.Display(externalLogin.ProviderDisplayName)
-        if (ViewBag.ShowRemoveButton)
+
+    @*<div class="panel"></div>*@
+
+    <div class="pull-right">
+        @foreach (ExternalLogin externalLogin in Model)
         {
-            using (Html.BeginForm("Disassociate", "Account"))
+            @Html.Display(externalLogin.ProviderDisplayName)
+            if (ViewBag.ShowRemoveButton)
             {
-                @Html.AntiForgeryToken()
-                <div>
-                    @Html.Hidden("provider", externalLogin.Provider)
-                    @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
-                    <input type="submit" value="Remove" title="Remove this @externalLogin.ProviderDisplayName credential from your account" />
-                </div>
+                <a class="btn btn-warning" href="javascript:$('#@externalLogin.ProviderDisplayName').submit()">Remove @externalLogin.ProviderDisplayName login</a>
             }
         }
-        else
+    </div>
+    <div class="clearfix"></div>
+
+    foreach (ExternalLogin externalLogin in Model)
+    {
+        if (ViewBag.ShowRemoveButton)
         {
-            @: &nbsp;
+            using (Html.BeginForm("Disassociate", "Account", null, FormMethod.Post, new { id = externalLogin.ProviderDisplayName }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.Hidden("provider", externalLogin.Provider)
+                @Html.Hidden("providerUserId", externalLogin.ProviderUserId)
+            }
         }
     }
 }
