--- a/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/BlogPost/PostSummary.cshtml
@@ -7,6 +7,9 @@
         <div class="list-group-item">
             <a class="page-header" href="@Url.Action("Details", new { id = item.Id })">
                 <h3>@Html.DisplayFor(m => item.Title)</h3>
+                <span class="glyphicon glyphicon-edit"></span>
+                <span>@item.Author.DisplayName</span>
+                <small>@item.CreatedDate</small>
             </a>
 
             <div class="well">
