Added google analytics to site usage tracking

--- a/MVC/4/DomeApp/DomeApp/Views/Shared/_Layout.cshtml
+++ b/MVC/4/DomeApp/DomeApp/Views/Shared/_Layout.cshtml
@@ -51,5 +51,6 @@
     @Scripts.Render("~/bundles/domeapp")
     @Scripts.Render("~/bundles/bootstrap_scripts")
     @RenderSection("scripts", required: false)
+    @{Html.RenderPartial("GoogleAnalytics");}
 </body>
 </html>
